enable_testing()

project(Basic)
set(TEST_DIR "basic")
FILE(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
FOREACH(child ${children})  
  IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child})
    add_subdirectory(${child})
  ENDIF()
ENDFOREACH()
#add_subdirectory(rt-chdir)
# add_subdirectory(rt-fix-226)
# add_subdirectory(rt15)
# add_subdirectory(rt19)
# add_subdirectory(rt40)
# add_subdirectory(rt40-mpi)
# add_subdirectory(rt42)